# AI-Infra-Learning-Lab

./: .gitignore  .gitleaks.toml  README.md  README_打开说明.md
40_实验练习/E00_工具链基础实验/os_network_reference/: README.md  diagnostics.py  pyproject.toml  service_worker.py
40_实验练习/E00_工具链基础实验/os_network_reference/tests/: test_diagnostics.py
40_实验练习/E01_Python基础练习/concurrency_reference/: README.md  concurrency_lab.py  pyproject.toml
40_实验练习/E01_Python基础练习/concurrency_reference/tests/: test_concurrency_lab.py
40_实验练习/E02_后端API实验/e02_service/: README.md  pyproject.toml
40_实验练习/E02_后端API实验/e02_service/app/: context.py  dependencies.py  errors.py  main.py  models.py  rate_limit.py  repository.py  security.py  service.py
40_实验练习/E02_后端API实验/e02_service/tests/: test_api.py  test_lifecycle_reliability.py  test_openapi.py
40_实验练习/E03_RAG实验/e03_rag_reference/: README.md  pyproject.toml
40_实验练习/E03_RAG实验/e03_rag_reference/examples/: run_evaluation.py
40_实验练习/E03_RAG实验/e03_rag_reference/rag_reference/: __init__.py  corpus.py  evaluation.py  generation.py  ingestion.py  lifecycle.py  parsing.py  prompting.py  retrieval.py  security.py  service.py
40_实验练习/E03_RAG实验/e03_rag_reference/tests/: test_adversarial_controls.py  test_evaluation_closure.py  test_generation_security.py  test_ingestion_lifecycle.py  test_lifecycle_cascade_hardening.py  test_multiformat_ingestion.py  test_retrieval.py  test_threat_boundaries.py
40_实验练习/E03_RAG实验/e03_rag_reference/tests/fixtures/: adversarial_corpus.json  generation_adversarial_cases.json  golden_queries.json  ingestion_failure_matrix.json  multiformat_ingestion_cases.json
40_实验练习/E04_Agent实验/e04_runtime_reference/: README.md  pyproject.toml
40_实验练习/E04_Agent实验/e04_runtime_reference/e04_runtime/: __init__.py  audit.py  errors.py  models.py  replay.py  repository.py  runtime.py  security.py  tools.py
40_实验练习/E04_Agent实验/e04_runtime_reference/tests/: conftest.py  test_approval_workflow.py  test_cancellation_and_injection.py  test_contracts_and_tools.py  test_replay_and_checkpoint.py  test_sessions_and_audit.py  test_target_security.py
40_实验练习/E06_数据库异步任务实验/e06_sqlite_reference/: README.md  pyproject.toml
40_实验练习/E06_数据库异步任务实验/e06_sqlite_reference/artifacts/: postgres_deadlock_reference_2026-07-18.json
40_实验练习/E06_数据库异步任务实验/e06_sqlite_reference/e06_reference/: __init__.py  api.py  cache.py  database.py  reliability.py  worker.py
40_实验练习/E06_数据库异步任务实验/e06_sqlite_reference/examples/: postgres_deadlock_demo.py
40_实验练习/E06_数据库异步任务实验/e06_sqlite_reference/tests/: test_api_integration.py  test_cache.py  test_database_foundations.py  test_outbox.py  test_reliability.py  test_schema_v2.py
40_实验练习/E10_推理服务实验/e10_inference_reference/: README.md  pyproject.toml
40_实验练习/E10_推理服务实验/e10_inference_reference/e10_reference/: __init__.py  demo.py  simulation.py
40_实验练习/E10_推理服务实验/e10_inference_reference/tests/: test_simulation.py
40_实验练习/GF10_金融工程全阶段实验候选/finance_reference/: README.md  pyproject.toml
40_实验练习/GF10_金融工程全阶段实验候选/finance_reference/finance_reference/: __init__.py  fixed_income.py  time_series.py
40_实验练习/GF10_金融工程全阶段实验候选/finance_reference/tests/: test_fixed_income.py  test_time_series.py
50_项目产出/P01_Mini_Scheduler/mini_scheduler/: .gitignore  README.md  pyproject.toml
50_项目产出/P01_Mini_Scheduler/mini_scheduler/artifacts/: aging_summary.csv  aging_task_type_breakdown.csv  cost_weight_summary.csv  experiment_summary_tables.md  high_load_summary.csv  prediction_error_summary.csv  task_type_breakdown.csv  worker_count_summary.csv
50_项目产出/P01_Mini_Scheduler/mini_scheduler/examples/: export_results.py  generate_svg_charts.py  run_aging_experiment.py  run_cost_weight_experiment.py  run_demo.py  run_high_load_experiment.py  run_rq01_pilot.py  run_worker_count_experiment.py  smoke_check.py
50_项目产出/P01_Mini_Scheduler/mini_scheduler/scheduler/: __init__.py  experiments.py  metrics.py  models.py  research.py  simulator.py  strategies.py  workloads.py
50_项目产出/P01_Mini_Scheduler/mini_scheduler/tests/: test_experiments.py  test_metrics.py  test_research.py  test_run_demo.py  test_simulator.py  test_strategies.py
50_项目产出/P03_AI_Workload_Platform/p03_service/: Dockerfile  README.md  compose.yaml  pyproject.toml
50_项目产出/P03_AI_Workload_Platform/p03_service/app/: auth.py  dependency_check.py  dispatcher.py  fixed_replay.py  main.py  metrics.py  models.py  postgres_store.py  rag_workload.py  redis_queue.py  settings.py  store.py  worker.py  worker_service.py
50_项目产出/P03_AI_Workload_Platform/p03_service/artifacts/e08_rag_reference_smoke/: README.md
50_项目产出/P03_AI_Workload_Platform/p03_service/artifacts/e08_rag_reference_smoke/bm25_single_worker/: locust_final.json  locust_stats.csv  locust_stats_history.csv  metrics_after_drain.json  run_summary.json  timeseries.csv  worker_resources.csv
50_项目产出/P03_AI_Workload_Platform/p03_service/artifacts/e08_reference_repeated/: README.md  experiment_metadata.json  randomized_run_plan.csv  repeated_run_results.csv  worker_scaling_confidence_intervals.csv
50_项目产出/P03_AI_Workload_Platform/p03_service/artifacts/e08_reference_repeated/order_1_repeat_3_workers_1/: locust_final.json  locust_stats.csv  locust_stats_history.csv  metrics_after_drain.json  run_summary.json  timeseries.csv  worker_resources.csv
50_项目产出/P03_AI_Workload_Platform/p03_service/artifacts/e08_reference_repeated/order_2_repeat_1_workers_4/: locust_final.json  locust_stats.csv  locust_stats_history.csv  metrics_after_drain.json  (+3 more)
50_项目产出/P03_AI_Workload_Platform/p03_service/artifacts/e08_reference_smoke/: README.md  worker_scaling_summary.csv
50_项目产出/P03_AI_Workload_Platform/p03_service/database/: init.sql
50_项目产出/P03_AI_Workload_Platform/p03_service/load/: locustfile.py
50_项目产出/P03_AI_Workload_Platform/p03_service/load/fixed_replay_example/: manifest.csv
50_项目产出/P03_AI_Workload_Platform/p03_service/scripts/: run_load_smoke.ps1  run_worker_scaling_repeated.ps1  run_worker_scaling_smoke.ps1  verify_compose.ps1
50_项目产出/P03_AI_Workload_Platform/p03_service/tests/: test_fixed_replay.py  test_redis_queue.py  test_workflow.py
(+468 files in other folders)
