[project]
name = "e00-os-network-reference"
version = "0.1.0"
description = "Deterministic process, permission, and request-path diagnostics reference"
requires-python = ">=3.13,<3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["diagnostics", "service_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
