[project]
name = "e01-concurrency-reference"
version = "0.1.0"
description = "Deterministic concurrency selection and cancellation reference"
requires-python = ">=3.13,<3.14"
dependencies = []

[project.optional-dependencies]
dev = ["pytest==8.4.2"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["concurrency_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
