[project]
name = "e02-task-api"
version = "0.1.0"
description = "Cumulative FastAPI task API for E02"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi==0.116.1",
  "uvicorn==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.2",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
