[project]
name = "mini-scheduler"
version = "0.1.0"
description = "A minimal task scheduler for AI Infra learning"
requires-python = ">=3.13,<3.14"

[project.optional-dependencies]
dev = ["pytest>=8.4,<9"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
